# MicroBundleCompute

./: .gitignore  CITATION.cff  README.md  pyproject.toml  quality.sh  requirements.txt
.github/workflows/: coverage_test.yml
src/microbundlecompute/: create_tissue_mask.py  image_analysis.py  optional_preprocessing.py  strain_analysis.py
src/microbundlecompute.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_create_tissue_mask.py  test_image_analysis.py  test_optional_preprocessing.py  test_strain_analysis.py
tests/files/example_adjust_valley/: ex1_0004.TIF  ex1_0006.TIF  ex1_0015.TIF  ex1_0019.TIF
tests/files/example_adjust_valley/movie/: 0005.TIF  0008.TIF  0010.TIF  0014.TIF  0025.TIF  0028.TIF  0029.TIF  0043.TIF  0049.TIF  0052.TIF  0067.TIF  0069.TIF  0071.TIF  ex1_0000.TIF  ex1_0013.TIF
tests/files/example_adjust_valley/unadjusted_movie/: 0001.TIF  0006.TIF  0008.TIF  0009.TIF  0011.TIF  0012.TIF  0014.TIF  0015.TIF  0021.TIF  0023.TIF  0024.TIF  0027.TIF  0030.TIF  0031.TIF  0032.TIF  0035.TIF  0036.TIF  0037.TIF  0038.TIF  0039.TIF  0042.TIF  0046.TIF  0047.TIF  0048.TIF  0054.TIF  0055.TIF  0057.TIF  0061.TIF  0062.TIF  0063.TIF  0064.TIF  0068.TIF  ex1_0007.TIF  ex1_0008.TIF  ex1_0011.TIF
tests/files/example_frame0_not_valley/masks/: tissue_mask.txt
tests/files/example_frame0_not_valley/movie/: 0001.TIF  0002.TIF  0003.TIF  0005.TIF  0019.TIF  0030.TIF  0035.TIF  0036.TIF  0062.TIF  0063.TIF  0064.TIF  0065.TIF  0066.TIF  0067.TIF  0068.TIF  0069.TIF  0070.TIF  0071.TIF  0072.TIF  0073.TIF  0074.TIF  0075.TIF  0076.TIF  0077.TIF  0078.TIF  0079.TIF  0080.TIF  0081.TIF  0082.TIF  0083.TIF  0084.TIF  0085.TIF  0086.TIF  0087.TIF  0088.TIF  0089.TIF  0090.TIF  0091.TIF  0092.TIF  0093.TIF  (+91 more)
tests/files/example_image_filter/movie/: ex1_0000.TIF  ex1_0001.TIF  ex1_0002.TIF  ex1_0003.TIF  ex1_0004.TIF
tests/files/fake_example_subpixel_short/masks/: tissue_mask.txt
tests/files/fake_example_subpixel_short/movie/: 0000.TIF  0001.TIF  0002.TIF  0003.TIF  0004.TIF  0005.TIF  0006.TIF  0007.TIF  0008.TIF  0009.TIF  0010.TIF  0011.TIF  0012.TIF  0013.TIF  0014.TIF  0015.TIF  0016.TIF  0017.TIF  0018.TIF  0019.TIF  0020.TIF  0021.TIF  0022.TIF  0023.TIF  0024.TIF  0025.TIF  0026.TIF  0027.TIF  0028.TIF  0029.TIF  0030.TIF  0031.TIF  0032.TIF  0033.TIF  0034.TIF  0035.TIF  0036.TIF  0037.TIF  0038.TIF  0039.TIF  (+11 more)
tests/files/real_example_masks/masks/: example_1.txt  example_2.txt
tests/files/real_example_masks/movie/: 0001.TIF  0002.TIF
tests/files/real_example_one_pillar_short/movie/: 0000.TIF  0003.TIF  0004.TIF  0022.TIF  0026.TIF  0040.TIF  0044.TIF  0053.TIF  0056.TIF  0070.TIF  0071.TIF
tests/files/real_example_one_pillar_short/pillar_results/: col.txt  pillar1_beat0_col.txt  pillar1_beat0_row.txt  pillar1_pillar_force_abs.txt  pillar1_pillar_force_col.txt  pillar1_pillar_force_row.txt  pillar_force_abs.txt  pillar_force_col.txt  row.txt
tests/files/real_example_pillar_short/masks/: pillar_mask_1.txt
tests/files/real_example_pillar_short/movie/: 0033.TIF  0058.TIF  0069.TIF  0072.TIF  0075.TIF
tests/files/real_example_pillar_short/pillar_results/: Pillar_1_pillar_force_abs.txt  info.txt  pillar1_col.txt  pillar1_row.txt  (+8 more)
tests/files/real_example_short/: slope_info.txt  sub_markers.txt  timeseries.txt  valleys.txt
tests/files/segmentation_examples/: ex2_0000.TIF  ex3_0000.TIF  ex4_0000.TIF  ex5_0000.TIF
tutorials/: run_code.py
tutorials/figs/: Mean_Abs_Disp_Error.eps
tutorials/tutorial_file/movie/: ex1_0012.TIF  ex1_0017.TIF  ex1_0018.TIF  ex1_0021.TIF  ex1_0034.TIF  ex1_0037.TIF  ex1_0038.TIF  ex1_0043.TIF  ex1_0048.TIF  ex1_0051.TIF  ex1_0052.TIF  ex1_0053.TIF  ex1_0064.TIF  ex1_0067.TIF  ex1_0071.TIF  ex1_0077.TIF  ex1_0078.TIF  ex1_0080.TIF  ex1_0081.TIF  ex1_0082.TIF  ex1_0083.TIF  ex1_0087.TIF  ex1_0088.TIF  ex1_0090.TIF  ex1_0092.TIF  ex1_0093.TIF  ex1_0094.TIF  ex1_0095.TIF  ex1_0097.TIF  ex1_0098.TIF  ex1_0100.TIF  ex1_0101.TIF  ex1_0102.TIF  ex1_0106.TIF  ex1_0108.TIF  ex1_0110.TIF  ex1_0115.TIF  ex1_0116.TIF  ex1_0118.TIF  ex1_0121.TIF  (+42 more)
(+726 files in other folders)
