[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "microbundlecompute"
version = "0.0.0"
authors = [
  { name="Emma Lejeune", email="elejeune@bu.edu" },
  { name="Hiba Kobeissi", email="hibakob@bu.edu" },
]
description = "microbundlecompute workflow"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs==22.1.0",
    "certifi==2022.9.24",
    "charset-normalizer==2.1.1",
    "contourpy==1.0.5",
    "coverage==6.5.0",
    "cycler==0.11.0",
    "decorator==4.4.2",
    "flake8==5.0.4",
    "fonttools==4.38.0",
    "idna==3.4",
    "imageio==2.22.2",
    "imageio-ffmpeg==0.4.7",
    "iniconfig==1.1.1",
    "kiwisolver==1.4.4",
    "matplotlib==3.6.1",
    "mccabe==0.7.0",
    "networkx==2.8.7",
    "numpy==1.23.4",
    "opencv-python==4.6.0.66",
    "packaging==21.3",
    "Pillow==9.3.0",
    "pluggy==1.0.0",
    "proglog==0.1.10",
    "py==1.11.0",
    "pycodestyle==2.9.1",
    "pyflakes==2.5.0",
    "pyparsing==3.0.9",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "python-dateutil==2.8.2",
    "PyWavelets==1.4.1",
    "requests==2.28.1",
    "scikit-image==0.19.3",
    "scipy==1.9.3",
    "six==1.16.0",
    "tifffile==2022.10.10",
    "tomli==2.0.1",
    "tqdm==4.64.1",
    "urllib3==1.26.12"
]

[project.urls]
"Homepage" = "https://github.com/elejeune11/microbundlecompute"
"Bug Tracker" = "https://github.com/elejeune11/microbundlecompute/issues"
